# inpi_researcher_tool

./: README.md  pyproject.toml
inpi_researcher_tool/: main.py
